portrait sizing issue on mobile side

--- a/src/App.css
+++ b/src/App.css
@@ -608,7 +608,7 @@ footer {
   flex-direction: column;
   align-items: center; }
   .about-container-mobile .sunny-portrait-mobile {
-    width: 400px;
+    width: 300px;
     border-radius: 20px; }
   .about-container-mobile .email-container-mobile {
     display: flex;
