--- a/src/Components/AboutMobile/_AboutMobile.scss
+++ b/src/Components/AboutMobile/_AboutMobile.scss
@@ -9,7 +9,7 @@
     align-items: center;
 
     .sunny-portrait-mobile {
-        width: 400px;
+        width: 300px;
         border-radius: 20px;
     }
 
